@@ -1,5 +1,6 @@
 #objdump: -s -j .text
 #name: align
+#not-target: m32c-*
 
 # Test the alignment pseudo-op.
 
