@@ -1,6 +1,7 @@
 #as: -I$srcdir/$subdir
 #objdump: -s -j .text
 #name: incbin
+#not-target: m32c-*
 
 # Test the incbin pseudo-op
 
