@@ -1,5 +1,6 @@
 #readelf: -s
 #name: .set with IFUNC
+#not-target: alpha*
 
 #...
 [ 	]+[0-9]+:[ 	]+[0-9a-f]+[ 	]+[0-9]+[ 	]+IFUNC[ 	]+GLOBAL[ 	]+DEFAULT[ 	]+[1-9] __GI_foo
