@@ -1,3 +1,11 @@
+2009-09-08  Alan Modra  <amodra@bigpond.net.au>
+
+	* gas/all/gas.exp (do_comment): Don't run on m32c.
+	* gas/all/align.d: Likewise.
+	* gas/all/incbin.d: Likewise.
+	* gas/macros/semi.d: Likewise.
+	* gas/elf/ifunc-1.d: Don't run on alpha.
+
 2009-09-04  Jie Zhang  <jie.zhang@analog.com>
 
 	* gas/bfin/arithmetic.s, gas/bfin/arithmetic.d: Add check
